--- a/media/css/estilos.css
+++ b/media/css/estilos.css
@@ -40,7 +40,7 @@ body main {background-color: #ffffff; display: flex; width: 100%; max-width: 132
             body main .menuLateral ul .menu-item {transition: all 0.5s ease; text-align: center; width: 100%; height: 45px; font: 599 12px/43px 'Open Sans'; text-transform: uppercase; color: #ffffff; cursor: pointer; margin-top: 10px; margin-right: 0.8%; letter-spacing: -0.040em; border: solid 1px #c9d7db; box-sizing: border-box; position: relative; border-radius: 10px;}
                 body main .menuLateral ul .menu-item:hover {border: solid 1px #0071cd; color: #0071cd;}
 
-                    /* sub botões - botão desativado */
+                    /* sub botões - botão debody main .bemVindo .imagemDashboardsativado */
                     body main .menuLateral ul .menu-item .subMenu {opacity: 0; visibility: hidden; transition: all 0.5s ease;}
                         body main .menuLateral ul .menu-item ul .subBotao {opacity: 0; visibility: hidden; z-index: 1; text-transform: none; height: max-content; line-height: 20px; position: relative;  transition: all 0.5s ease; margin-left: 5px;}
                             body main .menuLateral ul .menu-item ul .subBotao:hover {margin-left: 10px;}
@@ -67,7 +67,8 @@ body main {background-color: #ffffff; display: flex; width: 100%; max-width: 132
                 body main .menuLateral .botaoLogout span {font-size: 10px; color: lightgrey; line-height: 10px; cursor: default;}
 
     body main .bemVindo {padding-top: 5px; width: 100%; display: flex; position: relative;} 
-        body main .bemVindo .textoBemVindo {position: absolute; font-size: 70px; font-family: 'Open Sans'; color: #ededed; cursor: default; left: 30%; top: 50%;}
+        body main .bemVindo .imagemDashboard {display: flex; width: 100%; height: 100%; justify-content: center; align-items: center;}
+        body main .bemVindo .imagemDashboard svg {width: 100%; opacity: 0.8;}
 
         body main .bemVindo .desativada {position: absolute; z-index: 10; opacity: 0; visibility: hidden;}
         body main .bemVindo .ativa {position: absolute; z-index: 10; opacity: 1; visibility: visible;} 
