--- a/media/css/estilos.css
+++ b/media/css/estilos.css
@@ -73,7 +73,7 @@ body main {background-color: #ffffff; display: flex; width: 100%; max-width: 132
         body main .bemVindo .desativada {position: absolute; z-index: 10; opacity: 0; visibility: hidden;}
         body main .bemVindo .ativa {position: absolute; z-index: 10; opacity: 1; visibility: visible;} 
 
-        body main .bemVindo .vitrine {position: absolute; width: 99%; border: solid 2px #0071cd; padding: 2px; left: 5px; background-color: #ffffff; transition: all 0.5s ease; height: 100%; min-height: 650px; border-radius: 10px; overflow: auto;}
+        body main .bemVindo .vitrine {position: absolute; width: 99%; border: solid 2px #0071cd; padding: 2px; left: 5px; background-color: #ffffff; transition: all 0.5s ease; height: 100%; max-height: 690px; border-radius: 10px; overflow: auto;}
             /* barra de rolagem */
             body main .bemVindo .vitrine::-webkit-scrollbar-thumb {background-color: #3498db; border-radius: 6px; height: 95%;}
             body main .bemVindo .vitrine::-webkit-scrollbar {width: 5px;}
