--- a/media/css/estilos.css
+++ b/media/css/estilos.css
@@ -134,7 +134,7 @@ body main {background-color: #ffffff; display: flex; width: 100%; max-width: 132
                         body main .bemVindo .vitrine .formularios .formularioGeral .inputMesmaLinha .complemento:not(:placeholder-shown) + label {opacity: 1; visibility: visible; top: -12px; left: 40%; font-size: 10.5px; color: #ffffff; width: max-content; background-color: #0071cd; border-radius: 3px; padding: 0px 6px; line-height: 15px;}
 
             /* Tabela consultar Geral */
-            body main .bemVindo .vitrine .formularios .tabelaGeral { text-transform: capitalize; padding-top: 25px;}
+            body main .bemVindo .vitrine .formularios .tabelaGeral { text-transform: capitalize; padding-top: 25px; width: 100%;}
                 body main .bemVindo .vitrine .formularios .tabelaGeral tbody tr td, 
                 body main .bemVindo .vitrine .formularios .tabelaGeral tbody tr th {border-bottom: solid 1px #4293E0; padding: 2px 10px; max-width: 190px; font-size: 13px;}
                     body main .bemVindo .vitrine .formularios .tabelaGeral tbody tr td:nth-child(3) {max-width: 290px;}
