--- a/media/css/estilos.css
+++ b/media/css/estilos.css
@@ -79,7 +79,7 @@ body main {background-color: #ffffff; display: flex; width: 100%; max-width: 132
             body main .bemVindo .vitrine::-webkit-scrollbar {width: 5px;}
             body main .bemVindo .vitrine::-webkit-scrollbar-track {background-color: #f2f2f2;}
 
-            body main .bemVindo .vitrine .formularios {display: flex; flex-direction: column; width: 100%; align-content: center; flex-wrap: wrap; margin: 30px 0;}
+            body main .bemVindo .vitrine .formularios {display: flex; flex-direction: column; width: 95%; align-content: center; flex-wrap: wrap; margin: 30px auto;}
                 body main .bemVindo .vitrine .formularios p {font-weight: bold; width: max-content; font-family: 'Readex Pro', sans-serif; font-size: 19px; color: #767676; padding-bottom: 3px; position: relative;}
                     body main .bemVindo .vitrine .formularios p::after {content: ""; display: block; position: absolute; background-color: #4293E0; width: 110%; height: 2px; bottom: -2px;}
                     body main .bemVindo .vitrine .formularios .formularioGeral {display: flex; flex-direction: column; width: 50%;}
@@ -142,12 +142,15 @@ body main {background-color: #ffffff; display: flex; width: 100%; max-width: 132
                                 body main .bemVindo .vitrine .formularios .tabelaGeral tbody tr td button svg {color: #6a7071; transition: all 0.5s ease-in-out;}
                                     body main .bemVindo .vitrine .formularios .tabelaGeral tbody tr td button:hover svg {color: #ff0404;}
 
+                        body main .bemVindo .vitrine .formularios .tabelaGeral tbody tr:last-child td { border: none; padding-top: 10px;}
+                            body main .bemVindo .vitrine .formularios .tabelaGeral tbody tr:last-child td .geradorDeExtrato {border: solid 1px #101A28; border-radius: 10px; padding: 9px; text-transform: uppercase; font-weight: 500; cursor: pointer; transition: all 0.5s ease;}
+                                body main .bemVindo .vitrine .formularios .tabelaGeral tbody tr:last-child td .geradorDeExtrato:hover {background-color: #101A28; color: #EDEFEF;}
+
 
             /* Tabela da Sessão Histórico de Pagamento */
             body main .bemVindo .vitrine .formularios .tabelaHistoricoPagamento {width: 100%; text-align: center;}
                 body main .bemVindo .vitrine .formularios .tabelaHistoricoPagamento tbody tr:last-child td {border: none; padding-top: 10px;}
-                body main .bemVindo .vitrine .formularios .tabelaHistoricoPagamento tbody tr td button {border: solid 1px #101A28; border-radius: 10px; padding: 9px; text-transform: uppercase; font-weight: 500; cursor: pointer; transition: all 0.5s ease}
-                    body main .bemVindo .vitrine .formularios .tabelaHistoricoPagamento tbody tr td button:hover {background-color: #101A28; color: #EDEFEF;}
+
 
             /* Tabela consultar Clientes*/
             body main .bemVindo .vitrine .formularios .tabelaConsultarClientes {width: 95%;}
@@ -215,7 +218,7 @@ body main {background-color: #ffffff; display: flex; width: 100%; max-width: 132
                             body main .bemVindo .vitrine .formularios .formularioRealizarVenda .tabelaCarrinho .botaoVendas {width: 100%; max-width: 300px; margin: 0 auto;}
 
                 /* sessão - extrato */
-                body main .bemVindo .vitrine .formularios .formularioExtrato {width: 90%;}
+                body main .bemVindo .vitrine .formularios .formularioExtrato {width: 100%;}
                     body main .bemVindo .vitrine .formularios .formularioExtrato .inputMesmaLinha {padding-bottom: 25px; border-bottom: solid 1px lightgrey;}
                         body main .bemVindo .vitrine .formularios .formularioExtrato .inputMesmaLinha .containerInputLabel {position: relative; display: flex; margin-right: 17px; width: 100%;}
                         body main .bemVindo .vitrine .formularios .formularioExtrato .inputMesmaLinha .containerInputLabel:nth-child(1) {width: 100%; max-width: 300px;}
