--- a/media/css/estilos.css
+++ b/media/css/estilos.css
@@ -244,13 +244,14 @@ body main {background-color: #ffffff; display: flex; width: 100%; max-width: 132
 
                 body main .impressaoContainer .impressaoTabela .dataVenda {display: flex; border-bottom: 1px solid lightgrey; justify-content: center; padding-bottom: 10px; gap: 5px;}
 
-                body main .impressaoContainer .impressaoTabela .dadosContainer {display: flex; justify-content: space-between; padding: 15px 0; margin-bottom: 10px; font-size: 16px; font-family: 'Open Sans'; border-bottom: 1px solid lightgrey;}
+                body main .impressaoContainer .impressaoTabela .dadosContainer {display: flex; justify-content: space-between; padding: 15px 0; margin-bottom: 10px; font-size: 16px; font-family: 'Open Sans'; border-bottom: 1px solid lightgrey; gap: 5px;}
+                    body main .impressaoContainer .impressaoTabela .dadosContainer .divisaoDadosContainer {display: flex; flex-direction: column;}
 
                 body main .impressaoContainer .impressaoTabela .pacienteContainer {color: #2d6ead; font-weight: 600; font-family: 'Readex Pro';}
 
                 body main .impressaoContainer .impressaoTabela .tabelaExtrato {margin: 25px 0;}
                     body main .impressaoContainer .impressaoTabela .tabelaExtrato tbody tr th, 
-                    body main .impressaoContainer .impressaoTabela .tabelaExtrato tbody tr td {font-size: 20px; padding: 2px 10px; text-align: center; border-bottom: solid 1px #4293E0;}
+                    body main .impressaoContainer .impressaoTabela .tabelaExtrato tbody tr td {font-size: 15px; padding: 2px 10px; text-align: center; border-bottom: solid 1px #4293E0;}
                     
                         body main .impressaoContainer .impressaoTabela .tabelaExtrato tbody tr th:first-child, 
                         body main .impressaoContainer .impressaoTabela .tabelaExtrato tbody tr td:first-child {text-align: left;}
@@ -266,7 +267,10 @@ body main {background-color: #ffffff; display: flex; width: 100%; max-width: 132
                         /* Modificação exclusiva para o extrato FINAL da sessão extrato */
                         body main .impressaoContainer .impressaoTabela .tabelaExtratoFinal tbody tr th, 
                         body main .impressaoContainer .impressaoTabela .tabelaExtratoFinal tbody tr td {font-size: 14px;}
-                            body main .impressaoContainer .impressaoTabela .tabelaExtratoFinal tbody tr td:last-child {min-width: 119px;}
+                            body main .impressaoContainer .impressaoTabela .tabelaExtratoFinal tbody tr td:last-child {min-width: 92px;}
+                            body main .impressaoContainer .impressaoTabela .tabelaExtratoFinal tbody tr td:nth-child(3),
+                            body main .impressaoContainer .impressaoTabela .tabelaExtratoFinal tbody tr td:nth-child(4),
+                            body main .impressaoContainer .impressaoTabela .tabelaExtratoFinal tbody tr td:nth-child(5) {text-align: left;}
     
 
                             
