--- a/media/css/estilos.css
+++ b/media/css/estilos.css
@@ -49,6 +49,7 @@ body main {background-color: #ffffff; display: flex; width: 100%; max-width: 132
                                 body main .menuLateral ul .menu-item ul .subBotao:hover::before{opacity: 1; left: 3px;}
                         body main .menuLateral ul .menu-item ul .subBotaoAtivo {padding-left: 10px; background-color: rgba(0, 0, 0, 0.1); border-radius: 4px; color: #101A28;}
                             body main .menuLateral ul .menu-item ul .subBotaoAtivo::before {content: ""; background: url(../img/icones/setinhaMenu.gif); width: 3px; height: 5px; position: absolute; opacity: 1; top: 5px; left: 3px; transition: all 0.7s ease; filter: brightness(0.5);}
+                            body main .menuLateral ul .menu-item ul .subBotaoAtivo::after {position: absolute; content: ""; border-style: solid; border-width: 7px 10px 7px 0; border-color: transparent #0071cd transparent transparent; left: 231px;}
                                     
 
             /* o botão fica ativo em azul ao clicar */
